# Iceberg3D

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CCamera.cpp  CCamera.h  CIntroState.cpp  CIntroState.h  CMakeLists.txt  CShader.cpp  CShader.h  CShaderProgram.cpp  CShaderProgram.h  CTexture.cpp  CTexture.h  CVAO.cpp  CVBO.cpp  CVBO.h  CoreGame.cpp  CoreGame.h  Globals.cpp  Globals.h  LICENSE.md  Main.cpp  README.md  install_dependencies.sh  makefile  vimTest
Debug/: 3D Game Engine.ilk  vc120.idb
Debug/3D Game Engine.tlog/: 3D Game Engine.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Demos/basic_triangle/: CMakeLists.txt  ExampleState.cpp  ExampleState.h  Main.cpp
Demos/basic_triangle/resources/shaders/: triFrag.glsl  triVert.glsl
Demos/full_scene/: CMakeLists.txt  ExampleState.cpp  ExampleState.h  Main.cpp
Demos/full_scene/resources/assets/Deadpool/: deadpool sword 1.mtl
Demos/full_scene/resources/assets/ame_powder/: powderpeak_bk.tga  powderpeak_dn.tga  powderpeak_ft.tga
Demos/full_scene/resources/assets/deadpool/: CHR_Deadpool_Misc_TEXTSET_Masks_NormY.tga  WEP_MP7_TEXTSET_Color_NormX.tga
Demos/textured_quad/: CMakeLists.txt  ExampleState.cpp  ExampleState.h  Main.cpp
Demos/textured_quad/resources/shaders/: quadFrag.glsl  quadVert.glsl
Iceberg3D/include/: Buffer.h  Camera.h  GLHeaders.h  GLInputManager.h  GLWindow.h  GLWindowManager.h  Game.h  GlobalIncludes.h  Iceberg.h  InputManager.h  KeyCode.h  Mesh.h  Model.h  PhysicsManager.h  Skybox.h  StateMachine.h  TextManager.h  Texture.h  Utility.h  VAO.h  VBO.h  Window.h  WindowManager.h
Iceberg3D/resources/Assets/Deadpool/: CHR_Deadpool_Body_TEXTSET_Masks_NormY.tga  CHR_Deadpool_Misc_TEXTSET_Color_NormX.tga  DP GUN 1.mtl  DPROP_DeadpoolSword_TEXSET_Color_NormX.tga  dead_123456.mtl
Iceberg3D/resources/Assets/ame_powder/: powderpeak_dn.tga  powderpeak_lf.tga  powderpeak_rt.tga  powderpeak_up.tga
Iceberg3D/resources/Assets/mp_crimelem/: criminal-element_dn.tga  criminal-element_up.tga
Iceberg3D/resources/Shaders/: modelFrag.glsl  modelVert.glsl  skyVert.glsl  triFrag.glsl
Iceberg3D/source/: Buffer.cpp  Camera.cpp  Camera.h  Defines.h  GLInputManager.cpp  GLWindow.cpp  GLWindowManager.cpp  Game.cpp  Game.h  GlobalIncludes.h  Iceberg.h  IntroState.cpp  IntroState.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PhysicsManager.cpp  PhysicsManager.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Skybox.cpp  Skybox.h  StateMachine.cpp  StateMachine.h  TextManager.cpp  Texture.cpp  Texture.h  TransformManager.cpp  TransformManager.h  Utility.cpp  VAO.cpp  VAO.h  VBO.cpp  VBO.h  Window.cpp  WindowManager.cpp
Linux/: Iceberg3D_Demo
Linux/Shaders/: ColorFrag.glfs  FragmentShader.glfs
Sandbox/: CMakeLists.txt  ExampleState.cpp  ExampleState.h  Main.cpp
Shaders/: ColorVertex.glvs
Source/: Main.cpp
Source/Core/: Camera.cpp  Camera.h  Game.cpp  Game.h  GlobalIncludes.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PhysicsManager.cpp  PhysicsManager.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  TransformManager.cpp  TransformManager.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
Source/Program_States/: IntroState.cpp  IntroState.h
Source/Resources/Assets/ame_starfield/: ame_starfield.shader
Source/Resources/Shaders/: modelVert.glsl
src/: CCamera.h  CIntroState.h  CShader.cpp  CVAO.h  CVBO.cpp  CVBO.h  CoreGame.cpp  Globals.h  Iceberg3D_Demo  Main.cpp  make_win  make_win.bat  makefile
src/Shaders/: VertexShader.glvs
src/core/: Camera.cpp  Camera.h  Game.cpp  Game.h  GlobalIncludes.h  Mesh.cpp  Model.cpp  Model.h  PhysicsManager.cpp  PhysicsManager.h  Shader.cpp  ShaderProgram.cpp  ShaderProgram.h  Skybox.cpp  Skybox.h  Texture.h  VAO.h  VBO.cpp
src/program_states/: IntroState.cpp  IntroState.h
